# ropt-pymoo

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  static-checks.yml  tests.yml
0.18/: 404.html  index.html
0.19/reference/: index.html
0.20/example/: index.html
0.20/reference/: index.html
0.22/: index.html
0.22/reference/: index.html
0.23/example/: index.html
0.23/reference/: index.html
0.24/: 404.html  index.html
0.24/reference/: index.html
0.24/search/: search_index.json
0.24/usage/: index.html
0.25/: 404.html  index.html
0.25/search/: search_index.json
0.25/usage/: index.html
0.26/: 404.html  objects.inv
0.26/search/: search_index.json
0.27/: index.html
0.27/example/: index.html
0.27/usage/: index.html
dev/: 404.html  index.html  objects.inv
dev/example/: index.html
dev/reference/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: example.md  index.md  reference.md  usage.md
examples/: discrete_ga.py  discrete_ga.yml  rosenbrock_cmaes.py  rosenbrock_nm.py
src/ropt_pymoo/: __init__.py  _config.py  config.py  pymoo.py
tests/: conftest.py  test_examples.py  test_pymoo_backend.py
