[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ropt-pymoo"
description = "A pymoo plugin for the ropt robust optimization library"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = ["numpy<2", "pymoo", "pydantic"]

[project.urls]
"Homepage" = "https://github.com/TNO-ropt/ropt-pymoo"
"Repository" = "https://github.com/TNO-ropt/ropt-pymoo"
"Bug Tracker" = "https://github.com/TNO-ropt/ropt-pymoo/issues"

[project.entry-points."ropt.plugins.optimizer"]
pymoo = "ropt_pymoo.pymoo:PyMooOptimizerPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ropt_pymoo = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "ropt_pymoo.version.__version__" }

[tool.setuptools_scm]
write_to = "src/ropt_pymoo/version.py"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:.*Pydantic will allow any object with no validation since we cannot even enforce that the input is an instance of the given type.*:UserWarning',
    'ignore:.*The ``feasible`` property for ``pymoo.core.individual.Individual`` is deprecated.*:DeprecationWarning',
]

[tool.ruff.format]
exclude = ["src/ropt/version.py", "build"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "AIR",    # airflow-variable-name-task-id-mismatch
    "COM812", # missing-trailing-comma
    "E501",   # line-too-lone
    "ISC001", # single-line-implicit-string-concatenation   
    "DJ",     # flake8-django
    "FA",     # flake8-future-annotations
    "UP",     # pyupgrade 
    "S101",   # assert
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E402",    # module-import-not-at-top-of-file
    "D",       # pydocstyle
    "ANN401",  # anytype
    "FBT",     # flake8-boolean-trap
    "PLR2004", # magic-value-comparison
    "PLR0913", # too-many-arguments
]
"examples/*" = [
    "INP001", # implicit-namespace-package
    "T201",   # print
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pymoo.*"]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruamel-yaml>=0.18.6",
    "ruff>=0.6.5",
]
